# sleepy-coder

./: .gitignore  CLAUDE.md  README.md  cuda
cuda/: README.md  requirements.txt  setup.sh
cuda/configs/: full_train.yaml  quick_test.yaml
cuda/docs/: workflow.html
cuda/scripts/: README.md  continue_training.py  merge.py  quick_test.py  sync_from_mac.sh  train.py
data/sft/: eval_aligned.jsonl
data/sft/distilled/: all_distilled.jsonl  double_mut_borrow.jsonl  missing_clone.jsonl  missing_hash.jsonl  missing_ord.jsonl  mut_borrow_conflict.jsonl  option_ok_or.jsonl  result_map_err.jsonl  return_local_ref.jsonl
data/sft/domains/: all_domains.jsonl  axum_server.jsonl  cli_clap.jsonl  refactoring.jsonl  sqlx_db.jsonl  style_metrics.jsonl  yew_wasm.jsonl
data/sft/patterns/: decompose_god_struct.jsonl  decompose_long_function.jsonl  double_mut_borrow.jsonl  extract_modules_to_files.jsonl  if_let_option.jsonl  immutable_field.jsonl  inline_format_args.jsonl  is_some_and.jsonl  iter_copied.jsonl  let_chains.jsonl  let_else.jsonl  main_question_mark.jsonl  match_move.jsonl  match_result.jsonl  missing_clone.jsonl  missing_copy.jsonl  missing_debug.jsonl  missing_default.jsonl  missing_display.jsonl  missing_generic_bound.jsonl  missing_hash.jsonl  missing_mut.jsonl  missing_ord.jsonl  missing_partial_eq.jsonl  move_in_loop.jsonl  move_out_of_index.jsonl  mut_borrow_conflict.jsonl  no_blanket_suppress.jsonl  no_suppress_clone_ref.jsonl  no_suppress_dead_code.jsonl  no_suppress_format_args.jsonl  no_suppress_manual_map.jsonl  no_suppress_matches.jsonl  no_suppress_must_use.jsonl  no_suppress_needless_collect.jsonl  option_ok_or.jsonl  option_to_result_map_err.jsonl  option_unwrap_or.jsonl  propagate_error.jsonl  question_mark_return_type.jsonl  (+11 more)
data/sft/rust2024/: all_rust2024.jsonl  env_set_var_unsafe.jsonl  function_loc.jsonl  gen_keyword.jsonl  let_chains.jsonl  match_ergonomics_ref.jsonl  module_function_count.jsonl  unsafe_attributes.jsonl  unsafe_extern.jsonl  unsafe_op_in_unsafe_fn.jsonl
data/sft/targeted_v2/: all_targeted_v2.jsonl  bc_003_immut_mut_borrow.jsonl  bc_005_double_mut_borrow.jsonl  bc_010_return_local_ref.jsonl  rh_004_option_to_result.jsonl  tb_002_missing_clone.jsonl  tb_007_missing_hash.jsonl  tb_008_missing_ord.jsonl
docs/: ai_agent_instructions.md  architecture.md  changes.md  claude-web-code.md  course-correction.md  cuda-next-steps.md  dashboard.html  design.md  eli5.md  learnings.md  next-steps.md  paper-checklists.md  plan.md  prd.md  references.md  research.txt  results.md  share-paper-abstract-and-notes.md  share_implementation_journey.md  status.md  story.md  uwsh-paper-abstract-and-notes.md
docs/diagrams/: crate-dependencies.mmd  day-night-cycle.mmd  episode-data-flow.mmd  fix-attempt-sequence.mmd  system-architecture.mmd
docs/viz/: forgetting_analysis.json
py/: README.md  pyproject.toml
py/sleepy_pact/: __init__.py  cli.py
py/sleepy_pact/curate/: __init__.py
py/sleepy_pact/data/: __init__.py  episodes.py  sft.py
py/sleepy_pact/embed/: __init__.py
py/sleepy_pact/serve/: __init__.py
py/sleepy_pact/train/: __init__.py  config.py  lora.py  merge.py
py/sleepy_pact/viz/: __init__.py  plots.py
rust/: Cargo.toml
rust/crates/agent/: Cargo.toml
rust/crates/agent/src/: lib.rs
rust/crates/capture/: Cargo.toml
rust/crates/capture/src/: lib.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core_types/: Cargo.toml
rust/crates/core_types/src/: lib.rs
rust/crates/eval/: Cargo.toml
rust/crates/eval/src/: lib.rs
rust/crates/frontend/: Cargo.toml  Trunk.toml  index.html
rust/crates/frontend/src/: app.rs  lib.rs
rust/crates/frontend/src/components/: code_block.rs  diff_view.rs  loading.rs  mod.rs  stat_card.rs  task_item.rs
rust/crates/frontend/src/pages/: dashboard.rs  home.rs  mod.rs  task_detail.rs  tasks.rs
rust/crates/frontend/styles/: main.css
rust/crates/sandbox/: Cargo.toml
rust/crates/sandbox/src/: lib.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: main.rs  state.rs
rust/crates/server/src/routes/: analytics.rs  mod.rs  tasks.rs  ws.rs
rust/crates/tasks_rust_koans/: Cargo.toml
rust/crates/tasks_rust_koans/src/: lib.rs
rust/crates/web_types/: Cargo.toml
rust/crates/web_types/src/: lib.rs
scripts/: analyze_episodes.py  analyze_eval_coverage.py  build-all.sh  cargo.sh  collect_and_share.py  continual_train.py  dev-web.sh  distill_from_llm.py  eval_koans.py  export_share_averaged.py  gate_check.py  generate_distilled_data.py  generate_domain_tasks.py  generate_eval_aligned_koans.py  generate_koans.py  generate_koans_large.py  generate_results.py  generate_results_viz.py  generate_rust2024_data.py  generate_rust2024_koans.py  generate_targeted_training.py  generate_targeted_v2.py  generate_with_replay.py  lint.sh  measure_forgetting.py  plot_learning_loop.py  plot_results.py  prepare_training_data.py  quick-cycle.sh  reconstruct_adapter.py  routed_inference.py  run_experiments.py  run_share.py  share_complete.py  share_consolidate.py  share_full_algorithm.py  share_inference.py  share_phase2_proper.py  share_phase2_train.py  share_proper.py  (+8 more)
