[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleepy-pact"
version = "0.1.0"
description = "Python training and visualization for sleepy-coder"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Software Wrighter" }
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "peft>=0.7",
    "datasets>=2.14",
    "accelerate>=0.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
dashboard = [
    "streamlit>=1.28",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
