[package]
name = "capture"
version.workspace = true
edition.workspace = true
description = "Episode capture and storage for sleepy-coder"

[dependencies]
core_types = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
