[package]
name = "eval"
version.workspace = true
edition.workspace = true
description = "Evaluation harness for sleepy-coder"

[dependencies]
core_types = { workspace = true }
agent = { workspace = true }
capture = { workspace = true }
tasks_rust_koans = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
